--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # Launcher icons
+  flutter_launcher_icons: "^0.8.0"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path: "assets/launcher/icon.png"
+
 
 # The following section is specific to Flutter.
 flutter:
@@ -50,9 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/launcher/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
