--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Spinner dependency
   flutter_spinkit: ^4.1.2+1
 
+  cached_network_image: ^2.5.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
